# skynet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_clone/: __init__.py  __main__.py  cli.py  config.py
src/claude_clone/core/: __init__.py  agent.py  context.py  interrupt.py  plan.py  session.py  tokens.py
src/claude_clone/llm/: ollama_provider.py
src/claude_clone/safety/: __init__.py
src/claude_clone/tools/: base.py  file_ops.py  git.py  plan.py  registry.py  search.py  shell.py  todo.py  web.py
src/claude_clone/ui/: console.py  keybindings.py
tests/: __init__.py  conftest.py
tests/core/: test_plan.py
tests/tools/: test_plan_tool.py
tests/ui/: test_console_thinking.py
