[project]
name = "skynet"
version = "0.1.0"
description = "SkyNet - A local AI coding assistant CLI powered by Ollama"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "werd"}
]
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "gitpython>=3.1.0",
    "duckduckgo-search>=7.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
skynet = "claude_clone.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_clone"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
